added lesson collection and index page

--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -666,7 +666,10 @@ blockquote {
   margin-right: 2rem;
   margin-top: 1rem;
   margin-bottom: 1rem;
-  padding: 1rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
   border-width: 1px;
   --border-opacity: 1;
   border-color: #63b3ed;
@@ -92981,5 +92984,5 @@ code.highlighter-rouge {
     transition-delay: 1000ms;
   }
 }
-             
+            
  
